Add back some quality of life music player features

--- a/music/index.njk
+++ b/music/index.njk
@@ -12,6 +12,8 @@ layout: layouts/base.njk
 </div>
 -->
 
+<script src="music-viewer.js"></script>
+
 <div id="music-viewer">
     <ul id="music-list">
         {% for song in music %}
