--- a/index.njk
+++ b/index.njk
@@ -4,6 +4,7 @@ layout: layouts/base.njk
 ---
 
 <ul id="links">
+    <li>Email: <a href="mailto:andrew@mirx.dev">andrew@mirx.dev</a></li>
     <li>Music: <a href="music">here</a></li>
     <li>GitHub: <a href="https://github.com/mirrexagon">github.com/mirrexagon</a></li>
 </ul>
