--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -22,7 +22,7 @@
             <header>
                 <div style="margin: auto; max-width: 80%;">
                     <a href="/"><img src="/static/logo-mirrexagon-white.png" alt="Mirrexagon" style="width: 100%"></a>
-                    <p style="color: #707070; font-size: 10pt">Header font is <a href="http://www.dafont.com/altera2.font">Altera 6</a>.</p>
+                    <p style="color: #707070; font-size: 10pt">Header font is <a href="https://web.archive.org/web/20220727091512/https://www.dafont.com/altera2.font">Altera 6</a>.</p>
                 </div>
             </header>
 
